[package]
name = "highs"
version = "1.2.2"
authors = ["Ophir LOJKINE", "rust-or"]
edition = "2021"
description = "Safe rust bindings for the HiGHS linear programming solver. See http://highs.dev."
license = "MIT"
repository = "https://github.com/rust-or/highs"
keywords = ["linear-programming", "optimization", "math", "solver"]

[dependencies]
js-sys = "0.3"
wasm-bindgen = "0.2"
wasm-logger = "0.2"
log = "0.4"

